--- a/public/css/styleUserProfile.css
+++ b/public/css/styleUserProfile.css
@@ -11,7 +11,9 @@
   --softYellow: #fff5cc;
   --softRed: #ffcbc8;
 }
-
+body {
+  height: 100vh;
+}
 html {
   scroll-behavior: smooth;
   scroll-snap-type: y mandatory;
@@ -26,7 +28,11 @@ html {
   /* justify-content: space-between; */
   padding: 2rem;
   background: var(--text-color-primary);
-  background: linear-gradient(29deg, var(--text-color-primary) 0%, var(--background-color-secondary) 100%);
+  background: linear-gradient(
+    29deg,
+    var(--text-color-primary) 0%,
+    var(--background-color-secondary) 100%
+  );
   color: var(--whiteColor);
   position: fixed;
   left: 0;
@@ -159,7 +165,11 @@ body {
 
 .biz {
   background: var(--text-color-primary);
-  background: linear-gradient(330deg, var(--text-color-primary) 0%, var(--background-color-secondary) 100%);
+  background: linear-gradient(
+    330deg,
+    var(--text-color-primary) 0%,
+    var(--background-color-secondary) 100%
+  );
 }
 
 .header {
@@ -172,7 +182,12 @@ body {
   width: 100%;
   height: 80px;
   background: var(--header-color-primary);
-  background: linear-gradient(29deg, var(--header-color-primary), rgba(40, 34, 93, 1) 27%, rgba(101, 90, 223, 1) 100%);
+  background: linear-gradient(
+    29deg,
+    var(--header-color-primary),
+    rgba(40, 34, 93, 1) 27%,
+    rgba(101, 90, 223, 1) 100%
+  );
   z-index: 2;
 }
 
@@ -348,7 +363,8 @@ button:hover {
 }
 
 h1 {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 36px;
   font-weight: medium;
   color: #ffffff;
@@ -357,7 +373,8 @@ h1 {
 }
 
 h2 {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 30px;
   font-weight: medium;
   color: var(--header-color-primary);
@@ -383,7 +400,8 @@ h4 {
 #table {
   width: 500px;
   margin: auto;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 #table th {
@@ -414,7 +432,8 @@ h4 {
 }
 
 .footer p {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 14px;
 }
 
@@ -580,7 +599,8 @@ input[type="checkbox"] {
   color: var(--header-color-primary);
   font-weight: 100;
   font-size: 1.5em;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   letter-spacing: normal;
   text-shadow: none;
   width: max-content;
