--- a/public/css/styleBizProfile.css
+++ b/public/css/styleBizProfile.css
@@ -30,11 +30,7 @@ html {
   z-index: 20;
   padding: 2rem;
   background: var(--text-color-primary);
-  background: linear-gradient(
-    29deg,
-    var(--text-color-primary) 0%,
-    var(--background-color-secondary) 100%
-  );
+  background: linear-gradient(29deg, var(--text-color-primary) 0%, var(--background-color-secondary) 100%);
   color: var(--whiteColor);
   position: fixed;
   left: 0;
@@ -169,11 +165,7 @@ body {
 
 .biz {
   background: var(--text-color-primary);
-  background: linear-gradient(
-    330deg,
-    var(--text-color-primary) 0%,
-    var(--background-color-secondary) 100%
-  );
+  background: linear-gradient(330deg, var(--text-color-primary) 0%, var(--background-color-secondary) 100%);
 }
 
 .header {
@@ -186,12 +178,7 @@ body {
   width: 100%;
   height: 80px;
   background: var(--header-color-primary);
-  background: linear-gradient(
-    29deg,
-    var(--header-color-primary),
-    rgba(40, 34, 93, 1) 27%,
-    rgba(101, 90, 223, 1) 100%
-  );
+  background: linear-gradient(29deg, var(--header-color-primary), rgba(40, 34, 93, 1) 27%, rgba(101, 90, 223, 1) 100%);
   z-index: 2;
 }
 
@@ -386,8 +373,7 @@ button:hover {
 }
 
 h1 {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 36px;
   font-weight: medium;
   color: #ffffff;
@@ -396,8 +382,7 @@ h1 {
 }
 
 h2 {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 30px;
   font-weight: medium;
   color: var(--header-color-primary);
@@ -422,8 +407,7 @@ h4 {
 
 #table {
   margin: auto;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 #table th {
@@ -455,8 +439,7 @@ h4 {
 }
 
 .footer p {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 14px;
 }
 
@@ -621,8 +604,7 @@ input[type="checkbox"] {
   margin: auto;
 }
 .jobPostingTitle {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 2rem;
   font-weight: medium;
   color: black;
@@ -770,8 +752,7 @@ input[type="checkbox"] {
   color: var(--header-color-primary);
   font-weight: 100;
   font-size: 1.5em;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   letter-spacing: normal;
   text-shadow: none;
   width: max-content;
@@ -976,4 +957,9 @@ input[type="checkbox"] {
   padding: 1vh;
   cursor: pointer;
   color: white;
+}
+
+.landingContainer p:empty {
+  height: 0;
+  display: none;
 }
