--- a/public/css/styleBizProfile.css
+++ b/public/css/styleBizProfile.css
@@ -30,7 +30,11 @@ html {
   z-index: 20;
   padding: 2rem;
   background: var(--text-color-primary);
-  background: linear-gradient(29deg, var(--text-color-primary) 0%, var(--background-color-secondary) 100%);
+  background: linear-gradient(
+    29deg,
+    var(--text-color-primary) 0%,
+    var(--background-color-secondary) 100%
+  );
   color: var(--whiteColor);
   position: fixed;
   left: 0;
@@ -166,7 +170,11 @@ body {
 
 .biz {
   background: var(--text-color-primary);
-  background: linear-gradient(330deg, var(--text-color-primary) 0%, var(--background-color-secondary) 100%);
+  background: linear-gradient(
+    330deg,
+    var(--text-color-primary) 0%,
+    var(--background-color-secondary) 100%
+  );
 }
 
 .header {
@@ -179,7 +187,12 @@ body {
   width: 100%;
   height: 80px;
   background: var(--header-color-primary);
-  background: linear-gradient(29deg, var(--header-color-primary), rgba(40, 34, 93, 1) 27%, rgba(101, 90, 223, 1) 100%);
+  background: linear-gradient(
+    29deg,
+    var(--header-color-primary),
+    rgba(40, 34, 93, 1) 27%,
+    rgba(101, 90, 223, 1) 100%
+  );
   z-index: 2;
 }
 
@@ -374,7 +387,8 @@ button:hover {
 }
 
 h1 {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 36px;
   font-weight: medium;
   color: #ffffff;
@@ -383,7 +397,8 @@ h1 {
 }
 
 h2 {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 30px;
   font-weight: medium;
   color: var(--header-color-primary);
@@ -408,7 +423,8 @@ h4 {
 
 #table {
   margin: auto;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 #table th {
@@ -440,7 +456,8 @@ h4 {
 }
 
 .footer p {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 14px;
 }
 
@@ -605,7 +622,8 @@ input[type="checkbox"] {
   margin: auto;
 }
 .jobPostingTitle {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 2rem;
   font-weight: medium;
   color: black;
@@ -672,7 +690,7 @@ input[type="checkbox"] {
 .talentSearchMain button {
   all: unset;
   cursor: pointer;
-  width: 40vw;
+  width: 48vw;
 }
 
 #landing {
@@ -755,7 +773,8 @@ input[type="checkbox"] {
   color: var(--header-color-primary);
   font-weight: 100;
   font-size: 1.5em;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   letter-spacing: normal;
   text-shadow: none;
   width: max-content;
