--- a/public/css/styleUserProfile.css
+++ b/public/css/styleUserProfile.css
@@ -29,11 +29,7 @@ html {
   z-index: 20;
   padding: 2rem;
   background: var(--text-color-primary);
-  background: linear-gradient(
-    29deg,
-    var(--text-color-primary) 0%,
-    var(--background-color-secondary) 100%
-  );
+  background: linear-gradient(29deg, var(--text-color-primary) 0%, var(--background-color-secondary) 100%);
   color: var(--whiteColor);
   position: fixed;
   left: 0;
@@ -184,11 +180,7 @@ body {
 
 .biz {
   background: var(--text-color-primary);
-  background: linear-gradient(
-    330deg,
-    var(--text-color-primary) 0%,
-    var(--background-color-secondary) 100%
-  );
+  background: linear-gradient(330deg, var(--text-color-primary) 0%, var(--background-color-secondary) 100%);
 }
 
 .header {
@@ -201,12 +193,7 @@ body {
   width: 100%;
   height: 80px;
   background: var(--header-color-primary);
-  background: linear-gradient(
-    29deg,
-    var(--header-color-primary),
-    rgba(40, 34, 93, 1) 27%,
-    rgba(101, 90, 223, 1) 100%
-  );
+  background: linear-gradient(29deg, var(--header-color-primary), rgba(40, 34, 93, 1) 27%, rgba(101, 90, 223, 1) 100%);
   z-index: 2;
 }
 
@@ -391,8 +378,7 @@ button:hover {
 }
 
 h1 {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 36px;
   font-weight: medium;
   color: #ffffff;
@@ -401,8 +387,7 @@ h1 {
 }
 
 h2 {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 30px;
   font-weight: medium;
   color: var(--header-color-primary);
@@ -428,8 +413,7 @@ h4 {
 #userTable {
   width: 600px;
   margin: auto;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 #userTable th {
@@ -461,8 +445,7 @@ h4 {
 }
 
 .footer p {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 14px;
 }
 
@@ -632,8 +615,7 @@ input[type="checkbox"] {
   color: var(--header-color-primary);
   font-weight: 100;
   font-size: 1.5em;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   letter-spacing: normal;
   text-shadow: none;
   width: max-content;
